--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "require-dev": {
         "friendsofphp/php-cs-fixer": "~3.4.0",
         "phpstan/phpstan": "~1.8.0",
-        "phpunit/phpunit": ">=9"
+        "phpunit/phpunit": "~9.6"
     },
     "autoload": {
         "psr-4": {
